zero-cost-templating/tests/ui/compile_fail/missing_variable_value.stderr
error[E0061]: this method takes 1 argument but 0 arguments were supplied
  --> tests/ui/compile_fail/missing_variable_value.rs:16:37
   |
16 |     let template = yields!(template.test_page_title1());
   |                                     ^^^^^^^^^^^^^^^^-- an argument is missing
   |
note: method defined here
  --> tests/ui/compile_fail/missing_variable_value.rs:11:1
   |
11 | #[template_stream("test.html.hbs")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the attribute macro `template_stream` (in Nightly builds, run with -Z macro-backtrace for more info)
help: provide the argument
   |
16 |     let template = yields!(template.test_page_title1(/* page_title */));
   |                                                     ~~~~~~~~~~~~~~~~~~
